Fix positionning of bottom nav buttons on mobile. Refs #292

--- a/resources/assets/js/Collection/Filters/FiltersMobile.scss
+++ b/resources/assets/js/Collection/Filters/FiltersMobile.scss
@@ -106,10 +106,9 @@
 }
 
 .FiltersMobile__toggleholder {
-  flex: 1 1 50%;
+  flex: 0 0 50px;
 
   &.FiltersMobile__toggleholder--center {
-    flex: 0 0 50px;
     margin: 0 15px;
     & + .FiltersMobile__toggleholder--center {
       margin-left: 0;
@@ -117,6 +116,7 @@
   }
   &.FiltersMobile__toggleholder--left {
     display: flex;
+    flex: 0 0 auto;
     flex-flow: row nowrap;
     justify-content: flex-end;
     align-items: center;
